fix:removed editbtn fix [633]

--- a/src/app/components/devtools/devtools.component.html
+++ b/src/app/components/devtools/devtools.component.html
@@ -7,7 +7,9 @@
                     JSON Preview
                 </h2>
                 <span class="json-copy" (click)="copyJsonObject(response$)">
+                    <span class="tool-tip tool-tip-copy" id="copyTip" data-tip="Copy" tabindex="1">
                     <img src="/assets/copy.svg" alt="copy icon" />
+                    </span>
                 </span>
                 <button type='button' class='btn-close' data-bs-dismiss='modal' aria-label='Close'></button>
             </div>
