--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,8 +17,10 @@
       </ul>
     </nav>
     <div class="json-preview">
+      <span class="tool-tip" data-tip="JSON Preview">
       <span data-bs-toggle="modal" data-bs-target="#staticBackdrop">
         <img src="/assets/json.svg" alt="JSON Preview icon" />
+      </span>
       </span>
     </div>
   </div>
